# yolollm-hackaburg-2024

./: .env.example  .gitignore  LICENSE  README.md  assistant.py  gpt.py  main.py  pyproject.toml  requirements-mac.txt  requirements.txt  setup.py  tts.py
.devcontainer/: Dockerfile  devcontainer.json
src/: assistant.py  gpt.py  main.py  tts.py
