[tool.poetry]
name = "yolollm-hackaburg-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ultralytics = "^8.2.20"
opencv-python = "^4.9.0.80"
fastapi = "^0.111.0"
openai = "^1.30.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"